[package]
name = "GameRadar_MemoryGrabber"
version = "0.1.0"
authors = ["m1ndgames <m1ndfuck@m1ndfuck.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "0.1.5"
memflow-win32 = "0.1.5"
simplelog = "0.8.0"
iced-x86 = "1.10.0"
pelite = "0.9"
scan_fmt = "0.2.5"
pbr = { version = "1.0", optional = true }

[features]
default = ["progress_bar"]
progress_bar = ["pbr"]
